--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,8 @@ serde_json = "1.0"
 redis = { version = "0.24", features = ["tokio-comp"] }
 tokio-util = { version = "0.7", features = ["time"] }
 toml = "0.8"
+tower = "0.4"
+tower-http = { version = "0.5", features = ["limit"] }
 
 [dev-dependencies]
 tokio-test = "0.4"
